@@ -1,6 +1,14 @@
 2022-08-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* device/include/stdbit.h,
+	  device/lib/incl.mk,
+	  device/lib/__stdc_first_trailing_oneull.c,
+	  support/regression/tests/bitfirst.c.in:
+	  Provide bit and byte utilities first trailing bit functions.
+
+2022-08-08 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* device/include/stdbit.h,
 	  device/lib/__stdc_count_trailing_onesull.c,
 	  device/lib/incl.mk,
 	  support/regression/tests/bitcounttrailing.c.in:
